syntax = "proto3";

package org.signal.registration.ldap.rpc;

option swift_prefix = "";

service LdapValidationService {
  rpc ValidateCredentials (ValidateCredentialsRequest) returns (ValidateCredentialsResponse) {}
}

message ValidateCredentialsRequest {
  string user_id = 1;
  string password = 2;
}

message ValidateCredentialsResponse {
  oneof result {
    string phone_number = 1;
    ValidateCredentialsError error = 2;
  }
}

message ValidateCredentialsError {
  ValidateCredentialsErrorType error_type = 1;
  string message = 2;
}

enum ValidateCredentialsErrorType {
  VALIDATE_CREDENTIALS_ERROR_TYPE_UNSPECIFIED = 0;
  VALIDATE_CREDENTIALS_ERROR_TYPE_INVALID_CREDENTIALS = 1;
  VALIDATE_CREDENTIALS_ERROR_TYPE_USER_NOT_FOUND = 2;
  VALIDATE_CREDENTIALS_ERROR_TYPE_PHONE_NUMBER_NOT_FOUND = 3;
  VALIDATE_CREDENTIALS_ERROR_TYPE_SERVER_ERROR = 4;
}
